[gd_scene load_steps=4 format=2]

[ext_resource path="res://CopyWorker.gd" type="Script" id=1]
[ext_resource path="res://LobbyWorkerFrames.tres" type="SpriteFrames" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.0
height = 22.0

[node name="CopyWorker" type="PathFollow2D"]
rotate = false
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = ExtResource( 2 )
animation = "back"
frame = 7
playing = true

[node name="SpriteArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpriteArea"]
shape = SubResource( 1 )

[node name="WorkTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
[connection signal="body_entered" from="SpriteArea" to="." method="_on_SpriteArea_body_entered"]
[connection signal="timeout" from="WorkTimer" to="." method="_on_WorkTimer_timeout"]
